# slm-forecast

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Evaluate.ipynb
slm_forecast/: evaluate.py  plot.py  train.py
slm_forecast/models/: base.py  linear.py  ratio_based.py  regression.py  ridge.py
