[project]
name = "slm-forecast"
version = "0.1.0"
description = ""
authors = [
    {name = "Romain Florentz",email = "romain@heaviside.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "fire (>=0.7.0,<0.8.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
